change the image

--- a/src/tool.ipynb
+++ b/src/tool.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image\n",
     "\n",
     "# Open the image\n",
-    "image = Image.open(\"download.jpeg\")\n",
+    "image = Image.open(\"download.jpg\")\n",
     "\n",
     "# Resize the image\n",
-    "size = 80\n",
+    "size = 100\n",
     "new_size = (size, size)\n",
     "image = image.resize(new_size)\n",
     "\n",
     "# Save the resized image\n",
-    "image.save(\"resized_image_\"+str(size)+\"x\"+str(size)+\".png\")"
+    "image.save(\"resized_image_\"+str(size)+\"x\"+str(size)+\".jpg\")"
    ]
   }
  ],
